--- a/src/pages/courseDetails/style.css
+++ b/src/pages/courseDetails/style.css
@@ -5,6 +5,12 @@
     padding-bottom: 20px;
     padding-top: 20px;
     display: flex;
+    justify-content: space-around;
+}
+
+.courseDetails_head1 {
+    /* margin-right: 1000px; */
+    margin-top: 50px;
 }
 
 .courseDetails_head1 > h1 {
@@ -33,6 +39,7 @@
 }
 
 .courseDetails_imgBody {
+    /* margin-right: 100px; */
     background-color: white;
     color: black;
 }
@@ -79,7 +86,7 @@ h2 {
     background-color: rgb(214, 209, 209);
 }
 
-.courseDetails_des > h1 {
+.courseDetails > h1 {
     padding: 10px;
     padding-left: 100px;
     padding-top: 30px;
